--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <script src="javascript.js">
-           // game();
+        
+    </script>
+    <script>
+        game();
     </script>
 </body>
 </html>
